--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/mqtt": "^2.5.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "gh-pages": "^4.0.0",
     "monaco-editor": "0.34.0",
     "mqtt": "^4.3.7",
     "react": "latest",
@@ -21,6 +22,8 @@
   },
   "homepage": "https://flespi-software.github.io/pvm-plugin-sandbox",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
